<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bisnode</string>

    <!-- Fragment names -->
    <string name="search">Hledání</string>
    <string name="history">Historie</string>
    <string name="favourite">Oblíbené</string>
    <string name="company">Firma</string>
    <string name="contacts">Kontakty</string>
    <string name="activities">Činnost</string>
    <string name="management">Vedení</string>
    <string name="detail_info">Detaily</string>
    <string name="check_company">Prověřit</string>


    <string name="action_settings">Odhlásit</string>
    <string name="searchButtonName">Hledat</string>

    <!-- Labels -->
    <string name="ICO_label">IČO:</string>
    <string name="DIC_label">DIČ:</string>
    <string name="scoring_label">SKÓRING</string>
    <string name="index_label">PLATEBNÍ INDEX</string>

    <string name="phone_sectionTitle">Telefon</string>
    <string name="email_sectionTitle">E-mail</string>
    <string name="web_sectionTitle">Web</string>
    <string name="address_sectionTitle">Sídlo firmy</string>
    <string name="activities_sectionTitle">Činnost firmy</string>
    <string name="management_sectionTitle">Vedení firmy</string>
    <string name="indicators_sectionTitle">Indikátory</string>
    <string name="turnover_sectionTitle">Obrat firmy</string>
    <string name="employees_sectionTitle">Počet zaměstnanců</string>
    <string name="capital_sectionTitle">Základní kapitál</string>

    <string name="loginHelp">Můžete se přihlásit pomocí Login: foo@example.com Password: hello</string>
    <string name="serverError">Nepodařilo se připojit k serveru. Prosím zkontrolujte připojení a zkuste akci zopakovat.</string>
    <string name="filter_error">Filtrovaný seznam je prázdný</string>


    <string name="dummyLogin">foo@example.com</string>
    <string name="placeholderString">Placeholder</string>
    <string name="placeholderShort">XYZ</string>
    <string name="loadingString">Načítám data&#8230;</string>
    <string name="unknown">neznámý</string>
    <string name="notAvailable">Není k dispozici</string>
    <string name="imageButtonDescription">Super ikonka</string>

    <string name="hello_world">Hello world!</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="logged">Zůstat přihlášen</string>

    <!-- HTTP request URLs -->
    <string name="requestSearch">https://gnosus.bisnode.cz/magnusweb-rest/query/simple/subject.fulltext?q=</string>
    <string name="requestIndicators">https://gnosus.bisnode.cz/magnusweb-rest/query/simple/gnosus_report.indicators?ent_id=%d&amp;lang=CZ</string>
    <string name="requestID">https://gnosus.bisnode.cz/magnusweb-rest/query/simple/gnosus_report.identification?level=10&amp;inac_ind=00&amp;ent_id=%d&amp;lang=CZ</string>
    <string name="requestRegInfo">https://gnosus.bisnode.cz/magnusweb-rest/query/simple/gnosus_report.reg_info?level=10&amp;inac_ind=00&amp;ent_id=%d&amp;lang=CZ</string>
    <string name="requestContacts">https://gnosus.bisnode.cz/magnusweb-rest/query/simple/gnosus_report.contacts?level=10&amp;ent_id=%d&amp;lang=CZ</string>
    <string name="requestAddresses">https://gnosus.bisnode.cz/magnusweb-rest/query/simple/gnosus_report.addresses?level=10&amp;inac_ind=00&amp;ent_id=%d&amp;lang=CZ</string>
    <string name="requestSize">https://gnosus.bisnode.cz/magnusweb-rest/query/simple/gnosus_report.velikost?ent_id=%d&amp;lang=CZ</string>
    <string name="requestActivities">https://gnosus.bisnode.cz/magnusweb-rest/query/simple/gnosus_report.activities?ent_id=%d&amp;lang=CZ</string>
    <string name="requestPeople">https://gnosus.bisnode.cz/magnusweb-rest/query/simple/gnosus_report.company_board?inac_ind=00&amp;ent_id=%d&amp;lang=CZ</string>

    <!-- JSON Objects identification -->
    <string name="jsonContactPhone">Telefon</string>
    <string name="jsonContactEmail">E-mail</string>
    <string name="jsonContactWeb">www</string>
    <string name="jsonIdICO">IČ</string>
    <string name="jsonIdDIC">DIČ</string>
    <string name="jsonIdCompType">Právní forma</string>
    <string name="jsonIdCompDPH">Plátce DPH</string>

    <string name="labelSince">od roku</string>
    <string name="czechRepublic">Česká republika</string>
    <string name="labelYear">Rok</string>
    <string name="labelCount">Počet</string>

    <!-- JSON Fields -->
    <string name="jsonFieldType">typeTxt</string>
    <string name="jsonFieldValue">valueTxt</string>
    <string name="jsonFieldStartDate">strtDt</string>
    <string name="jsonFieldYear">year</string>
    <string name="jsonFieldTurnover">turnover</string>
    <string name="jsonFieldEmployeeCount">emplCnt</string>
    <string name="jsonFieldCapital">regCapl</string>
    <string name="jsonFieldCurrency">regCaplCrcy</string>
    <string name="jsonFieldScoringCode">bisnodeScoringCode</string>
    <string name="jsonFieldScoringDesc">bisnodeScoringDesc</string>
    <string name="jsonFieldPaymentIndex">paymentIndex</string>
    <string name="jsonFieldPaymentIndexDesc">paymentIndexLightDesc</string>
    <string name="jsonFieldPaymentIndexCategory">paymentIndexCategory</string>
    <string name="jsonFieldNegInsolvence">insolvenceAktivni</string>
    <string name="jsonFieldNegInsolvenceHis">insolvenceHistoricke</string>
    <string name="jsonFieldNegLikvidace">likvidaceAktivni</string>
    <string name="jsonFieldNegLikvidaceeHis">likvidaceHistoricke</string>
    <string name="jsonFieldNegNespPlatce">nespPlatceDphAktivni</string>
    <string name="jsonFieldNegNespPlatceHis">nespPlatceDphHistoricke</string>
    <string name="jsonFieldNegExekuce">exekuceAktivni</string>
    <string name="jsonFieldNegExekuceHis">exekuceHistoricke</string>
    <string name="jsonFieldNegDluhy">dluhyAktivni</string>
    <string name="jsonFieldNegDluhyHis">dluhyHistoricke</string>

    <!-- Indicators description -->
    <string name="indicatorInsolvence">Insolvence</string>
    <string name="indicatorExekuce">Exekuce</string>
    <string name="indicatorNespPlatce">Nespolehlivý plátce DPH</string>
    <string name="indicatorLikvidace">Likvidace</string>
    <string name="indicatorDluhy">Dluhy</string>
    <string name="noNegatives">Žádné negativní indikátory</string>
    <string name="historical">historické</string>

    <!-- Financial values description -->
    <string name="suffix_thousand">tis.</string>
    <string name="suffix_million">mil.</string>
    <string name="suffix_billion">mld.</string>
    <string name="action_search">filter</string>
    <string name="filtering">Zobrazit</string>

</resources>
