<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/indicators_sectionTitle"
        android:textColor="#33b5e5"
        android:id="@+id/indicatorsTitle" />

        <!-- Two TextViews in the same line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/scoring_label"
                android:id="@+id/scoringLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/index_label"
                android:id="@+id/indexLabel" />

        </LinearLayout>

        <!-- Two TextViews in the same line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/scoringValue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/indexValue" />

        </LinearLayout>

        <!-- Two TextViews in the same line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/scoringDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/indexDescription" />

        </LinearLayout>

        <include layout="@layout/block_four_pieces"
            android:id="@+id/turnoverBlock"/>

        <include layout="@layout/block_four_pieces"
            android:id="@+id/employeesBlock"/>

    </LinearLayout>

</ScrollView>