<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Sector A -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:textStyle="bold"
            android:id="@+id/companyName" />

        <!-- Two TextViews in the same line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/companyICO" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/companyDIC" />

        </LinearLayout>

        <!-- Sector B -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#c0c0c0" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/indicators_sectionTitle"
        android:textColor="#33b5e5"
        android:id="@+id/indicatorsTitle" />

        <!-- Two TextViews in the same line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/scoring_label"
                android:id="@+id/scoringLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/index_label"
                android:id="@+id/indexLabel" />

        </LinearLayout>

        <!-- Two TextViews in the same line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/scoringValue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/indexValue" />

        </LinearLayout>

        <!-- Two TextViews in the same line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/scoringDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/indexDescription" />

        </LinearLayout>


        <!-- Sector C -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#c0c0c0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/turnover_sectionTitle"
            android:textColor="#33b5e5"
            android:id="@+id/turnoverTitle" />

        <!-- FOUR TextViews in the same line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="XYZ"
            android:layout_gravity="center_horizontal"
            android:id="@+id/turnoverYear1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/turnoverValue1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/turnoverYear3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/turnoverValue3" />

        </LinearLayout>

        <!-- FOUR TextViews in the same line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/turnoverYear2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/turnoverValue2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/turnoverYear4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/turnoverValue4" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#c0c0c0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/employees_sectionTitle"
            android:textColor="#33b5e5"
            android:id="@+id/employeesTitle" />

        <!-- FOUR TextViews in the same line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/employeesYear1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/employeesValue1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/employeesYear3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/employeesValue3" />

        </LinearLayout>

        <!-- FOUR TextViews in the same line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/employeesYear2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/employeesValue2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/employeesYear4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="XYZ"
                android:layout_gravity="center_horizontal"
                android:id="@+id/employeesValue4" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>